fix close menu button by z-index

--- a/src/app/packages/menu/menu/menu.component.scss
+++ b/src/app/packages/menu/menu/menu.component.scss
@@ -40,6 +40,7 @@ div.menu-wrapper {
       background: transparent;
       cursor: pointer;
       outline: none;
+      z-index: 2;
       &:hover {
         color: #2e2d46;
       }
